--- a/AgilePCDaemon.vcxproj.filters
+++ b/AgilePCDaemon.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="src\datamanager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Makefile" />
